src/objects/Cricket_Game_Future_Predictions__c.object
<CustomObject>
    <description>Cricket Game Future Predictions</description>
    <fields>
        <fullName>Actual_Finals_Qualifier__c</fullName>
        <description>Actual Final&apos;s Qualifier</description>
        <inlineHelpText>Actual Final&apos;s Qualifier</inlineHelpText>
        <label>Actual Final&apos;s Qualifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Game_Winner__c</fullName>
        <description>Actual Game Winner</description>
        <inlineHelpText>Actual Game Winner</inlineHelpText>
        <label>Actual Game Winner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Semis_Qualifier__c</fullName>
        <description>Actual Semi&apos;s Qualifier</description>
        <inlineHelpText>Actual Semi&apos;s Qualifier</inlineHelpText>
        <label>Actual Semi&apos;s Qualifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finals_Qualifier_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final&apos;s Qualifier Points</description>
        <inlineHelpText>Final&apos;s Qualifier Points</inlineHelpText>
        <label>Final&apos;s Qualifier Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Game_Winner_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Game Winner Points</description>
        <inlineHelpText>Game Winner Points</inlineHelpText>
        <label>Game Winner Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Owner</description>
        <inlineHelpText>Owner</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Cricket_Team__c</referenceTo>
        <relationshipLabel>Cricket Game Future Predictions</relationshipLabel>
        <relationshipName>Cricket_Game_Future_Predictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Predicted_Finals_Qualifier__c</fullName>
        <description>Predicted Final&apos;s Qualifier</description>
        <inlineHelpText>Predicted Final&apos;s Qualifier</inlineHelpText>
        <label>Predicted Final&apos;s Qualifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Predicted_Game_Winner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Predicted Game Winner</description>
        <inlineHelpText>Predicted Game Winner</inlineHelpText>
        <label>Predicted Game Winner</label>
        <referenceTo>Cricket_Actual_Team__c</referenceTo>
        <relationshipLabel>Game Predicted Final Winner</relationshipLabel>
        <relationshipName>GamePredictedFinalWinner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predicted_Semis_Qualifier__c</fullName>
        <description>Predicted Semi&apos;s Qualifier</description>
        <inlineHelpText>Predicted Semi&apos;s Qualifier</inlineHelpText>
        <label>Predicted Semi&apos;s Qualifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Semi_Qualifier_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Semi&apos;s Qualifier Points</description>
        <inlineHelpText>Semi&apos;s Qualifier Points</inlineHelpText>
        <label>Semi&apos;s Qualifier Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Future_Prediction_Points__c</fullName>
        <description>Total Future Prediction Points</description>
        <formula>Finals_Qualifier_Points__c +  Game_Winner_Points__c + Semi_Qualifier_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Future Prediction Points</inlineHelpText>
        <label>Total Future Prediction Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cricket Game Future Predictions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGFP-{0000}</displayFormat>
        <label>Cricket Game Future Predictions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricket Game Future Predictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>